# Pyros3D

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Diary.md  LICENSE  License.md  README.md  premake4.lua  tags
.github/workflows/: cmake.yml
android/: README.md
android/jni/: Android.mk  Application.mk
android/src/: AnimationLoader.cpp  Font.cpp  ModelLoader.cpp  Texture.cpp
demos/Rotating Cube/: RotatingCube.cpp  RotatingCube.h
examples/: CMakeLists.txt  MainProgram.cpp  includes.h
examples/BaseExample/: BaseExample.cpp  BaseExample.h
examples/Custom Material/: CustomMaterial.cpp  CustomMaterial.h  MainProgram.cpp  fragment.frag
examples/CustomMaterial/: CustomMaterial.cpp  CustomMaterial.h  MainProgram.cpp  vertex.vert
examples/CustomMaterial/assets/: fragment.frag  shader.glsl  vertex.vert
examples/Decals/: Decals.cpp  Decals.h
examples/DeferredRendering/: DeferredRendering.cpp  DeferredRendering.h  DeferredRenderingExample.cpp  DeferredRenderingExample.h  MainProgram.cpp
examples/DeferredRendering/DeferredRenderer/: DeferredRenderer.cpp  DeferredRenderer.h
examples/DeferredRendering/assets/shaders/: gbuffer.frag  gbuffer.glsl  gbuffer.vert  secondpass.frag  secondpass.glsl  secondpassAmbient.glsl  secondpassDirectional.glsl  secondpassPoint.glsl  secondpassSpot.glsl
examples/DeferredRendering/shaders/: gbuffer.vert  secondpass.vert
examples/DepthOfField/: DepthOfField.cpp  DepthOfField.h
examples/DepthOfField/assets/: suzanne.p3dm
examples/ImGuiExample/: ImGuiExample.cpp  ImGuiExample.h  imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_imp_sfml.cpp  imgui_impl_opengl3.cpp  imgui_impl_sdl.cpp  imgui_impl_sfml.cpp  imgui_impl_sfml.h  imgui_internal.h  imgui_sdl2_context.cpp  imgui_sdl2_context.h  stb_rect_pack.h  stb_textedit.h  stb_truetype.h
examples/IslandDemo/: IslandDemo.cpp  IslandDemo.h
examples/IslandDemo/assets/: WaterShader.glsl
examples/LOD_Example/: LOD_Example.cpp  LOD_Example.h
examples/LOD_Example/assets/teapots/: teapotLOD1.p3dm
examples/LOD_example/: LOD_example.cpp  LOD_example.h  Octree.h
examples/LOD_example/assets/teapots/: teapotLOD2.p3dm  teapotLOD3.p3dm
examples/LuaScripting/: LuaScripting.cpp  LuaScripting.h  LuaScritping.cpp  main.lua
examples/MotionBlurExample/: MotionBlurExample.cpp  MotionBlurExample.h
examples/ParallaxMapping/: ParallaxMapping.cpp  ParallaxMapping.h
examples/ParallaxMapping/assets/: shader.glsl
examples/ParticlesExample/: ParticlesExample.cpp  ParticlesExample.h
examples/ParticlesExample/assets/: particle.glsl
examples/Picking With Painter Method/: MainProgram.cpp  PickingExamplePainterMethod.cpp  PickingExamplePainterMethod.h
examples/PickingPainterMethod/: PickingPainterMethod.cpp  PickingPainterMethod.h
examples/PickingWithPainterMethod/: MainProgram.cpp  PickingExamplePainterMethod.cpp  PickingExamplePainterMethod.h
examples/RacingGame/: Game.cpp  Game.h  RacingGame.cpp  RacingGame.h  imgui_sdl2_context.h  main.cpp
examples/RacingGame/assets/: track.p3dm
examples/RacingGame/assets/delorean/: WheelBL.p3dm  WheelBR.p3dm  WheelFL.p3dm  WheelFR.p3dm
examples/RacingGame/assets/semaphore/: semaphore.p3dm
examples/RacingGame/assets/track/: track.p3dm
examples/RacingGame/imgui/: imgui_impl_sfml.cpp  imgui_impl_sfml.h
examples/Rotating Cube/: MainProgram.cpp  RotatingCube.cpp  RotatingCube.h
examples/Rotating Cube With Lighting/: RotatingCubeWithLighting.cpp  RotatingCubeWithLighting.h
examples/Rotating Cube With Lighting And Shadow/: RotatingCubeWithLightingAndShadow.cpp  RotatingCubeWithLightingAndShadow.h
examples/RotatingCube/: MainProgram.cpp  RotatingCube.cpp  RotatingCube.h
examples/RotatingCubeWithLighting/: MainProgram.cpp  RotatingCubeWithLighting.cpp  RotatingCubeWithLighting.h
examples/RotatingCubeWithLightingAndShadow/: MainProgram.cpp  RotatingCubeWithLightingAndShadow.cpp  RotatingCubeWithLightingAndShadow.h
examples/RotatingTextureAnimatedCube/: RotatingTextureAnimatedCube.cpp  RotatingTextureAnimatedCube.h
examples/RotatingTexturedCube/: MainProgram.cpp  RotatingTexturedCube.cpp  RotatingTexturedCube.h
examples/RotatingTexturedCube/assets/: Texture.DDS  Texture.pkm
examples/SSAOExample/: SSAOExample.cpp  SSAOExample.h
examples/ScreenSpaceReflection/: ScreenSpaceReflection.cpp  ScreenSpaceReflection.h
examples/Simple Physics/: MainProgram.cpp  SimplePhysics.cpp  SimplePhysics.h
examples/SimplePhysics/: MainProgram.cpp  SimplePhysics.cpp  SimplePhysics.h
examples/SkeletonAnimation/: Animation.p3da  AnimationManager.cpp  AnimationManager.h  MainProgram.cpp  Model.p3dm  SkeletonAnimation.cpp  SkeletonAnimation.h  charRigged.dae
examples/SkeletonAnimation/assets/: Model.p3dm
examples/SkeletonAnimationExample/: SkeletonAnimationExample.cpp  SkeletonAnimationExample.h
examples/SkeletonAnimationExample/assets/: Animation.p3da  Model.p3dm  alert.p3da  human.p3dm  walk.p3da
examples/Text Rendering/: MainProgram.cpp  TextRendering.cpp  TextRendering.h
examples/TextRendering/: MainProgram.cpp  TextRendering.cpp  TextRendering.h
examples/WindowManagers/GLFW/: GLFWContext.cpp  GLFWContext.h
examples/WindowManagers/SDL/: SDLContext.cpp  SDLContext.h
examples/WindowManagers/SDL2/: SDL2Context.cpp  SDL2Context.h
examples/WindowManagers/SFML/: SFMLContext.cpp  SFMLContext.h
examples/assets/: Animation.p3da  WaterShader.glsl  main.lua  particle.glsl  run.p3da
other platforms/emscripten-webgl/: CustomMaterial.make  DeferredRendering.make  MainProgram.cpp  Makefile  PickingPainterMethod.make  README.md  RacingGame.make  RotatingCube.cpp  RotatingCube.h  RotatingCube.make  RotatingCubeWithLighting.make  RotatingCubeWithLightingAndShadow.make  RotatingTextureAnimatedCube.make  RotatingTexturedCube.make  (+3 more)
resources/: PyrosShader.glsl  missing_texture.DDS
shaders/: PyrosShader.glsl  pyros.glsl
tools/AssimpImporter/: CMakeLists.txt
tools/AssimpImporter/src/: AssimpAnimationImporter.cpp  AssimpAnimationImporter.h  AssimpModelImporter.cpp  AssimpModelImporter.h  MainProgram.cpp
(+520 files in other folders)
